--- a/2/1.md
+++ b/2/1.md
@@ -16,9 +16,9 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 Unauthorized stack overflow vulnerability exists when requesting admin.cgi parameter with setSyncTimeHost
 ```
 
-![image-20250126204002928](D:\Desktop\Telesquare\2\image-20250126204002928.png)
+![image-20250126204002928](image-20250126204002928.png)
 
-![image-20250126204023043](D:\Desktop\Telesquare\2\image-20250126204023043.png)
+![image-20250126204023043](image-20250126204023043.png)
 
 ## 3、Recurring vulnerabilities and POC
 
