--- a/7/1.md
+++ b/7/1.md
@@ -16,9 +16,9 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 Unauthorized stack overflow vulnerability exists when requesting admin.cgi parameter with setNtp
 ```
 
-![image-20250126205949244](D:\Desktop\Telesquare\7\image-20250126205949244.png)
+![image-20250126205949244](image-20250126205949244.png)
 
-![image-20250126210004153](D:\Desktop\Telesquare\7\image-20250126210004153.png)
+![image-20250126210004153](image-20250126210004153.png)
 
 ## 3、Recurring vulnerabilities and POC
 
