--- a/8/1.md
+++ b/8/1.md
@@ -16,9 +16,9 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 Unauthorized stack overflow vulnerability exists when requesting admin.cgi parameter with setUsernamePassword
 ```
 
-![image-20250126210144622](D:\Desktop\Telesquare\8\image-20250126210144622.png)
+![image-20250126210144622](image-20250126210144622.png)
 
-![image-20250126210200242](D:\Desktop\Telesquare\8\image-20250126210200242.png)
+![image-20250126210200242](image-20250126210200242.png)
 
 ## 3、Recurring vulnerabilities and POC
 
