--- a/9/1.md
+++ b/9/1.md
@@ -16,9 +16,9 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 Unauthorized password modification vulnerability exists when requesting admin.cgi parameter with setUserNamePassword
 ```
 
-![image-20250126210144622](D:\Desktop\Telesquare\9\image-20250126210144622.png)
+![image-20250126210144622](image-20250126210144622.png)
 
-![image-20250126210200242](D:\Desktop\Telesquare\9\image-20250126210200242.png)
+![image-20250126210200242](image-20250126210200242.png)
 
 ## 3、Recurring vulnerabilities and POC
 
