--- a/10/1.md
+++ b/10/1.md
@@ -16,7 +16,7 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 There is an unauthorized stack overflow vulnerability in the login interface when requesting systemtil.cgi
 ```
 
-![image-20250126210539353](D:\Desktop\Telesquare\10\image-20250126210539353.png)
+![image-20250126210539353](image-20250126210539353.png)
 
 ## 3、Recurring vulnerabilities and POC
 
