--- a/11/1.md
+++ b/11/1.md
@@ -16,7 +16,7 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 There is an unauthorized information leakage vulnerability when requesting systemutilit.cgi
 ```
 
-![image-20250126210805464](D:\Desktop\Telesquare\11\image-20250126210805464.png)
+![image-20250126210805464](image-20250126210805464.png)
 
 ## 3、Recurring vulnerabilities and POC
 
