--- a/1/1.md
+++ b/1/1.md
@@ -16,9 +16,9 @@ The version mined this time is: TLR-2005KSH sw version 1.1.4
 There is an unauthorized information leakage vulnerability when requesting the admin.cgi parameter to be getUserNamePassword
 ```
 
-![image-20250126130226225](D:\Desktop\Telesquare\1\image-20250126130226225.png)
+![image-20250126130226225](image-20250126130226225.png)
 
-![image-20250126130300370](D:\Desktop\Telesquare\1\image-20250126130300370.png)
+![image-20250126130300370](image-20250126130300370.png)
 
 ## 3、Recurring vulnerabilities and POC
 
